# storage/api-docs/api-docs.json
@@ -218,7 +218,7 @@
                 ],
                 "summary": "Get List User",
                 "description": "All User",
-                "operationId": "getAllCountrie",
+                "operationId": "getAllUser",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -244,6 +244,36 @@
                         "bearer_token": []
                     }
                 ]
+            }
+        },
+        "/category/selectCategory": {
+            "get": {
+                "tags": [
+                    "GET CATEGORY"
+                ],
+                "summary": "Get List Category",
+                "description": "All Category",
+                "operationId": "getAllCategory",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
             }
         },
         "/category/insertCategory": {
